--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
-script: make test
+dist: xenial
+language: python
+python: 3.7
+install:
+  - python setup.py install
+script:
+  - python -m pytest tests/
