--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: python
 python: 3.7
 install:
-  - pip install -r requirements
+  - pip install -r requirements.txt
   - python setup.py install
 script:
   - python -m pytest tests/
